--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,21 @@ dependencies:
   path_provider: ^2.0.11
   shared_preferences: ^2.0.15
   fl_chart: ^0.70.0
+  crypto: ^3.0.3
   table_calendar: ^3.0.8
   sqflite: ^2.0.0+4
-  intl: ^0.17.0
+  intl: ^0.19.0
   path: ^1.8.0
   uuid: ^3.0.0
   logger: ^1.1.0
-
+  flutter_spinkit: ^5.1.0
+  google_fonts: ^4.0.4
+  flutter_svg: ^1.1.6
+  flutter_secure_storage: ^8.0.0
+  image_picker: ^0.8.5+3          # Добавлено для выбора аватарки
+  url_launcher: ^6.1.7           # Добавлено для открытия внешних ссылок
+  flutter_localizations:         # Добавлено для поддержки нескольких языков
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -29,10 +37,10 @@ dev_dependencies:
   build_runner: ^2.3.3
   flutter_lints: ^2.0.0
 
-
-
 flutter:
   assets:
     - assets/images/
-    - assets/data/analyses.json
+    - assets/data/research_list.json
+    - assets/data/medications.json
+    - assets/icons/register.svg
   uses-material-design: true
