--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   google_fonts: ^4.0.4
   flutter_svg: ^1.1.6
+  flutter_local_notifications: ^14.1.5
+  timezone: ^0.9.0
   flutter_secure_storage: ^8.0.0
   image_picker: ^0.8.5+3          # Добавлено для выбора аватарки
   url_launcher: ^6.1.7           # Добавлено для открытия внешних ссылок
@@ -36,11 +38,18 @@ dev_dependencies:
   hive_generator: ^1.1.0
   build_runner: ^2.3.3
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.png"
 
 flutter:
   assets:
     - assets/images/
     - assets/data/medications.json
     - assets/icons/register.svg
+    - assets/icons/app_icon.png
     - lib/analysis/data/analysis_data.json
   uses-material-design: true
