--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.6.10
   provider: ^6.1.2
   hive: ^2.0.0
   hive_flutter: ^1.1.0
