--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   google_fonts: ^4.0.4
   flutter_svg: ^1.1.6
+  syncfusion_flutter_gauges: ^20.2.47
   flutter_local_notifications: ^14.1.5
   timezone: ^0.9.0
   flutter_secure_storage: ^8.0.0
