--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   path_provider: ^2.0.11
   shared_preferences: ^2.0.15
   fl_chart: ^0.70.0
+  numberpicker: ^2.1.1
   crypto: ^3.0.3
   table_calendar: ^3.0.8
   sqflite: ^2.0.0+4
